:lipstick: Fix sidebar header overflow and image size

--- a/assets/scss/components/_sidebar.scss
+++ b/assets/scss/components/_sidebar.scss
@@ -41,6 +41,7 @@ nav.sidebar {
           @apply font-bold;
           align-items: center;
           display: flex;
+          overflow: hidden;
           padding: 0.5rem 1rem;
           &:hover {
             > i, .identicon {
@@ -51,6 +52,7 @@ nav.sidebar {
             @apply w-12 h-12 rounded-full text-base bg-primary-500 text-white;
             align-items: center;
             display: flex;
+            flex-shrink: 0;
             justify-content: center;
             margin-right: 0.5rem;
             text-transform: uppercase;
@@ -60,6 +62,7 @@ nav.sidebar {
             @apply bg-white w-12 h-12 rounded-full;
             align-items: center;
             display: flex;
+            flex-shrink: 0;
             justify-content: center;
             margin-right: 0.5rem;
             overflow: hidden;
@@ -72,6 +75,7 @@ nav.sidebar {
             @apply w-12 h-12 rounded-full bg-primary-500 text-base text-white;
             align-items: center;
             display: flex;
+            flex-shrink: 0;
             justify-content: center;
             margin-right: 0.5rem;
             transition: background-color 0.25s, color 0.25s;
